Fixed more syntax errors

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
     <main>
         <section>
-            <h2>About Us
+            <h2>About Us<h2> <!--Added missing h2 tag-->>
             <p>Welcome to our website. We provide top-notch services in various fields.</p>
         </section>
         <section>
@@ -40,7 +40,7 @@
                 <input type="email" id="email" name="email">
                 <textarea id="message" name="message" rows="4" cols="50" placeholder="Enter your message here"></textarea>
                 <button type="submit">Send</button>
-            
+            </form> <!--Added missing form tag-->>
         </section>
     </main>
     <footer>
