--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <h1>Debugging Activity</h1>
     </header>
     <nav>
-        <ul style="color: brown;">
+        <ul> <!--Removed the css code because there is already one in styles.css-->
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</li>
+            <li><a href="#">About</a></li><!--Added missing tag for hyperlink-->
             <li><a href="#">Services</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
